manifests/ingress-apps/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: ingress-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: ingress-app
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 80
